--- a/angular.json
+++ b/angular.json
@@ -7,7 +7,7 @@
       "projectType": "library",
       "root": "projects/alefall/makethejob",
       "sourceRoot": "projects/alefall/makethejob/src",
-      "prefix": "lib",
+      "prefix": "all",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
@@ -30,6 +30,104 @@
             "main": "projects/alefall/makethejob/src/test.ts",
             "tsConfig": "projects/alefall/makethejob/tsconfig.spec.json",
             "karmaConfig": "projects/alefall/makethejob/karma.conf.js"
+          }
+        }
+      }
+    },
+    "application-example": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      "root": "projects/application-example",
+      "sourceRoot": "projects/application-example/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/application-example",
+            "index": "projects/application-example/src/index.html",
+            "main": "projects/application-example/src/main.ts",
+            "polyfills": "projects/application-example/src/polyfills.ts",
+            "tsConfig": "projects/application-example/tsconfig.app.json",
+            "assets": [
+              "projects/application-example/src/favicon.ico",
+              "projects/application-example/src/assets"
+            ],
+            "styles": [
+              "projects/application-example/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/application-example/src/environments/environment.ts",
+                  "with": "projects/application-example/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "application-example:build:production"
+            },
+            "development": {
+              "browserTarget": "application-example:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "application-example:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/application-example/src/test.ts",
+            "polyfills": "projects/application-example/src/polyfills.ts",
+            "tsConfig": "projects/application-example/tsconfig.spec.json",
+            "karmaConfig": "projects/application-example/karma.conf.js",
+            "assets": [
+              "projects/application-example/src/favicon.ico",
+              "projects/application-example/src/assets"
+            ],
+            "styles": [
+              "projects/application-example/src/styles.css"
+            ],
+            "scripts": []
           }
         }
       }
