--- a/projects/olafi-moon/make-the-job/package.json
+++ b/projects/olafi-moon/make-the-job/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alefall/makethejob",
-  "version": "0.0.1",
+  "name": "@olafi-moon/make-the-job",
+  "version": "0.1.1",
   "peerDependencies": {
     "@angular/common": "^13.1.0",
     "@angular/core": "^13.1.0"
